# matter-mcp-server

./: .gitignore  LICENSE  README.md  matter-coder-search.py  matter-datamodel-mcp.py  matter-mcp-server-chip.py  matter-mcp-server.py  pyproject.toml  requirements.txt  sample.vscreplay
datamodel/: clusters.py  device_types.py  generate_datamodel.py
samples/: Commission_on_Network.py  Commission_with_Code.py  Get_Node.py  Get_Nodes.py  Send_a_command.py  Set_Wifi_Credentials.py  Start_Listening.py  Write_acl.py
